# spirit

./: .bazelrc  .gitignore  BUILD.bazel
test/: .gitignore  BUILD.bazel  MODULE.bazel
